# seamless

./: Cargo.toml  TODO  TODO.md
seamless/: Cargo.toml  build.rs
seamless-dylib/: Cargo.toml
seamless-dylib/src/: lib.rs
seamless-server/: Cargo.toml
seamless-server/src/: main.rs
seamless/src/: lib.rs  local.rs  remote.rs
seamless/src/language/: c.rs  mod.rs  ruby.c  ruby.rs  rust.rs
test/: Makefile  c_test.c  callable_functions.json  ruby_test.rb  rust_test.rs  seamless_bridge.h  use.c  use.rs
